--- a/STANDARD/assets/views/partials/top-navbar.html
+++ b/STANDARD/assets/views/partials/top-navbar.html
@@ -1,8 +1,8 @@
 <!-- start: TOP NAVBAR -->
 <!-- start: NAVBAR HEADER -->
-<div  class="navbar-header">
+<div class="navbar-header">
     <a href="#" class="sidebar-mobile-toggler pull-left hidden-md hidden-lg" ng-click="toggle('sidebar')" class="btn btn-navbar sidebar-toggle"> <i class="ti-align-justify"></i> </a>
-    <a class="navbar-brand" ui-sref="app.dashboard"> <img ng-src="{{app.layout.logo}}" alt="{{app.name}}"/> </a>
+    <a class="navbar-brand" ui-sref="app.dashboard"> <img ng-src="{{app.layout.logo}}" alt="{{app.name}}" /> </a>
     <a href="#" class="sidebar-toggler pull-right visible-md visible-lg" ng-click="app.layout.isSidebarClosed = !app.layout.isSidebarClosed"> <i class="ti-align-justify"></i> </a>
     <a class="pull-right menu-toggler visible-xs-block" id="menu-toggler" ng-click="navbarCollapsed = !navbarCollapsed"> <span class="sr-only">Toggle navigation</span> <i class="ti-view-grid"></i> </a>
 </div>
@@ -12,7 +12,7 @@
     <ul class="nav navbar-right" ct-fullheight="window" data-ct-fullheight-exclusion="header" data-ct-fullheight-if="isSmallDevice">
         <!-- start: MESSAGES DROPDOWN -->
         <!-- /// controller:  'InboxCtrl' -  localtion: assets/js/controllers/InboxCtrl.js /// -->
-       <!--  <li class="dropdown" uib-dropdown on-toggle="toggled(open)" ng-controller="InboxCtrl">
+        <!--  <li class="dropdown" uib-dropdown on-toggle="toggled(open)" ng-controller="InboxCtrl">
             <a href class="dropdown-toggle" uib-dropdown-toggle>
                 <notification-icon count='scopeVariable'>
                     <i class="ti-comment"></i>
@@ -82,9 +82,9 @@
         <!-- start: LANGUAGE SWITCHER -->
         <!-- start: USER OPTIONS DROPDOWN -->
         <li class="dropdown current-user" uib-dropdown on-toggle="toggled(open)">
-            <a href class="dropdown-toggle" uib-dropdown-toggle> <img src="assets/images/avatar-1.jpg" alt="{{user.name}}"> <span ng-controller="SparklineCtrl"  class="username">{{userC}} <i class="ti-angle-down"></i></i></span> </a>
+            <a href class="dropdown-toggle" uib-dropdown-toggle> <img src="assets/images/avatar-1.jpg" alt="{{user.name}}"> <span ng-controller="SparklineCtrl" class="username">{{userC}} <i class="ti-angle-down"></i></i></span> </a>
             <ul class="dropdown-menu dropdown-dark">
-              <!--   <li>
+                <!--   <li>
                     <a ui-sref="app.pages.user" translate="topbar.user.PROFILE"> My Profile </a>
                 </li>
                 <li>
@@ -110,7 +110,7 @@
     </div>
     <!-- end: MENU TOGGLER FOR MOBILE DEVICES -->
 </div>
-<a class="sidebar-mobile-toggler dropdown-off-sidebar hidden-md hidden-lg" ng-click="toggle('off-sidebar')"> &nbsp; </a>
+<!-- <a class="sidebar-mobile-toggler dropdown-off-sidebar hidden-md hidden-lg" ng-click="toggle('off-sidebar')"> &nbsp; </a> -->
 <a class="dropdown-off-sidebar hidden-sm hidden-xs" ng-click="toggle('off-sidebar')"> &nbsp; </a>
 <!-- end: NAVBAR COLLAPSE -->
 <!-- start: TOP NAVBAR -->
