--- a/STANDARD/assets/views/partials/top-navbar.html
+++ b/STANDARD/assets/views/partials/top-navbar.html
@@ -111,6 +111,6 @@
     <!-- end: MENU TOGGLER FOR MOBILE DEVICES -->
 </div>
 <!-- <a class="sidebar-mobile-toggler dropdown-off-sidebar hidden-md hidden-lg" ng-click="toggle('off-sidebar')"> &nbsp; </a> -->
-<a class="dropdown-off-sidebar hidden-sm hidden-xs" ng-click="toggle('off-sidebar')"> &nbsp; </a>
+<!-- <a class="dropdown-off-sidebar hidden-sm hidden-xs" ng-click="toggle('off-sidebar')"> &nbsp; </a> -->
 <!-- end: NAVBAR COLLAPSE -->
 <!-- start: TOP NAVBAR -->
