--- a/STANDARD/assets/views/partials/nav.html
+++ b/STANDARD/assets/views/partials/nav.html
@@ -231,6 +231,34 @@
         </a>
     </li>
 	<!--  Fin : Commandes a preparer -->
+    <!-- Panier -->
+    <li ui-sref-active="active">
+        <a id="admin" ui-sref="app.GestPers">
+            <div class="item-content">
+                <div class="item-media">
+                    <i class="fa  fa-shopping-cart" aria-hidden="true"></i>
+                </div>
+                <div class="item-inner">
+                    <span class="title"> Gestion Personnel </span>
+                </div>
+            </div>
+        </a>
+    </li>
+    <!-- Fin : Panier -->
+    <!-- Panier -->
+    <li ui-sref-active="active">
+        <a id="admin" ui-sref="app.GestProd">
+            <div class="item-content">
+                <div class="item-media">
+                    <i class="fa  fa-shopping-cart" aria-hidden="true"></i>
+                </div>
+                <div class="item-inner">
+                    <span class="title"> Gestion Produit </span>
+                </div>
+            </div>
+        </a>
+    </li>
+    <!-- Fin : Panier -->
 </ul>
 
 
