--- a/STANDARD/assets/views/Livreur/ValidationLivraison.html
+++ b/STANDARD/assets/views/Livreur/ValidationLivraison.html
@@ -3,6 +3,7 @@
     <div class="row">
         <div class="col-sm-8">
             <h1 class="mainTitle">Commandes a livrer </h1>
+            <input ng-model="searchText" class="form-control text-center margin-top-15" type="text" placeholder="Rechercher une commande">
             <!-- <span class="mainDescription">Use this page to start from scratch and put your custom content</span> -->
         </div>
         <div ncy-breadcrumb></div>
