--- a/STANDARD/assets/views/Client/login_login.html
+++ b/STANDARD/assets/views/Client/login_login.html
@@ -19,14 +19,23 @@
 							<input type="text" class="form-control" name="phone" placeholder="+212600000000">
 							<i class="fa fa-phone"></i> </span>
 					</div>
-					<div class="form-group form-actions">
-						<span class="input-icon">
+					<div class="form-group form-actions has-error">
+								<label> Error Label <span class="symbol required"></span> </label>
+								<span class="input-icon">
 							<input type="password" class="form-control password" name="password" placeholder="Mot de Passe">
 							<i class="fa fa-lock"></i>
 							<a class="forgot" ui-sref="login.forgot">
 								Mot de Passe Oublie!
 							</a> </span>
 					</div>
+					<!-- <div class="form-group form-actions"> -->
+						<!-- <span class="input-icon">
+							<input type="password" class="form-control password" name="password" placeholder="Mot de Passe">
+							<i class="fa fa-lock"></i>
+							<a class="forgot" ui-sref="login.forgot">
+								Mot de Passe Oublie!
+							</a> </span> -->
+					<!-- </div> -->
 					<div class="form-actions">
 						<!-- <div class="checkbox clip-check check-primary">
 							<input type="checkbox" id="remember" value="1">
