--- a/STANDARD/assets/views/login_login.html
+++ b/STANDARD/assets/views/login_login.html
@@ -14,12 +14,14 @@
                     <p>
                         Connectez vos à votre espace : 
                     </p>
-                    <div class="form-group">
+                    <div class="form-group has-error ">
+                        
                         <span class="input-icon">
 							<input type="text" ng-model="number" class="form-control"  placeholder="Numero de Telephone">
 							<i class="fa fa-user"></i> </span>
                     </div>
-                    <div class="form-group form-actions">
+                    <div class="form-group form-actions has-error">
+                        
                         <span class="input-icon">
 							<input type="password" ng-model="pass" class="form-control password" placeholder="Mot de passe">
 							<i class="fa fa-lock"></i>
@@ -27,13 +29,14 @@
 								Mot de passe oublié
 							</a> </span>
                     </div>
-                    <div class="form-actions">
+                    <div class="form-actions has-error">
                         <!-- <div class="checkbox clip-check check-primary">
                             <input type="checkbox" id="remember" value="1">
                             <label for="remember">
 								Keep me signed in
 							</label>
                         </div> -->
+                        <label id="error" class="hidden"> Username ou mot de passe incorrecte <span class="symbol required"></span> </label>
                         <button ng-click="login()" class="btn btn-primary pull-right">
 							Login <i class="fa fa-arrow-circle-right"></i>
 						</button>
