--- a/STANDARD/assets/views/login_forgot.html
+++ b/STANDARD/assets/views/login_forgot.html
@@ -9,23 +9,23 @@
 			<form class="form-forgot">
 				<fieldset>
 					<legend>
-						Forget Password?
+						Mot de passe oublié ? 
 					</legend>
 					<p>
-						Enter your e-mail address below to reset your password.
+						Vos pouvez nous appelez : 
 					</p>
 					<div class="form-group">
 						<span class="input-icon">
-							<input type="email" class="form-control" name="email" placeholder="Email">
-							<i class="fa fa-envelope-o"></i> </span>
+							 +212537580858
+							</span>
 					</div>
 					<div class="form-actions">
 						<a class="btn btn-primary btn-o" ui-sref="login.signin">
 							<i class="fa fa-chevron-circle-left"></i> Log-In
 						</a>
-						<button type="submit" class="btn btn-primary pull-right">
+						<!-- <button type="submit" class="btn btn-primary pull-right">
 							Submit <i class="fa fa-arrow-circle-right"></i>
-						</button>
+						</button> -->
 					</div>
 				</fieldset>
 			</form>
