--- a/STANDARD/assets/views/login_forgot.html
+++ b/STANDARD/assets/views/login_forgot.html
@@ -21,7 +21,7 @@
 					</div>
 					<div class="form-actions">
 						<a class="btn btn-primary btn-o" ui-sref="login.signin">
-							<i class="fa fa-chevron-circle-left"></i> Log-In
+							<i class="fa fa-chevron-circle-left"></i> Se Connecter
 						</a>
 						<!-- <button type="submit" class="btn btn-primary pull-right">
 							Submit <i class="fa fa-arrow-circle-right"></i>
