--- a/STANDARD/assets/views/Client/createAccount.html
+++ b/STANDARD/assets/views/Client/createAccount.html
@@ -164,13 +164,14 @@
                                 </label>
                             </div>
                         </div> -->
-                    <div class="form-actions">
+                    <div class="form-actions has-success">
                         <!-- <p>
                                 Avez-Vous Deja Un Compte?
                                 <a ui-sref="login.signin" href="#/login/signin">
                                     Se Connecter
                                 </a>
                             </p> -->
+                        <label id="success" class="hidden"> Username ou mot de passe incorrecte <span class="symbol required"></span> </label>
                         <button class="btn btn-primary pull-right" type="submit">
                                 S'inscrire <i class="fa fa-arrow-circle-right"></i>
                             </button>
