--- a/STANDARD/assets/views/Livreur/ValidationCommandes.html
+++ b/STANDARD/assets/views/Livreur/ValidationCommandes.html
@@ -1,12 +1,12 @@
 <!-- start: PAGE TITLE -->
-<section id="page-title">
+<section id="page-title" class="page-title-center">
     <div class="row">
-        <div class="col-sm-8">
-            <h1 class="mainTitle">Commandes a collecter </h1>
-            <input ng-model="searchText" class="form-control text-center margin-top-15" type="text" placeholder="Rechercher une commande">
-            <!-- <span class="mainDescription">Use this page to start from scratch and put your custom content</span> -->
+        <div class="col-sm-8 col-sm-offset-2">
+            <h1 class="mainTitle">Commandes a collecter</h1>
+            <!--  <span class="mainDescription">Themify Icons is a complete set of icons for use in web design and apps, consisting of 320+ pixel-perfect, hand-crafted icons that draw inspiration from Apple iOS 7</span> -->
+            <input ng-model="searchText" class="form-control text-center margin-top-15" type="text" placeholder="Rechercher un client">
+            <div ncy-breadcrumb></div>
         </div>
-        <div ncy-breadcrumb></div>
     </div>
 </section>
 <!-- end: PAGE TITLE -->
@@ -14,7 +14,7 @@
 <div class="container">
     <div ng-controller="LivreurCtrl" class="row">
         <div class="col-md-12">
-           <!--  <h5 class="over-title margin-bottom-15">Responsive <span class="text-bold">Table</span></h5>
+            <!--  <h5 class="over-title margin-bottom-15">Responsive <span class="text-bold">Table</span></h5>
             <p>
                 Create responsive tables by wrapping any <code>.table</code> in <code>.table-responsive</code> to make them scroll horizontally on small devices (under 768px). When viewing on anything larger than 768px wide, you will not see any difference
                 in these tables.
@@ -24,29 +24,29 @@
             </div> -->
             <div ng-init="toCollecte()" class="table-responsive">
                 <div id="table" class=" table-responsive">
-                     <!-- <label>Search: <input ng-model="searchText"></label> -->
+                    <!-- <label>Search: <input ng-model="searchText"></label> -->
                     <table class="table table-stripped table-hover" id="sample-table-2">
                         <thead>
                             <tr>
-                                <th class="hidden-xs" >#</th>
+                                <th class="hidden-xs">#</th>
                                 <th>NOM CLIENT </th>
                                 <th class="hidden-xs">PRENOM CLIENT</th>
-                                <th class="hidden-xs" >TELEPHONE CLIENT</th>
+                                <th class="hidden-xs">TELEPHONE CLIENT</th>
                                 <th>ADRESSE COMPLETE </th>
-                                <th class="hidden-xs" >DATE PASSAGE </th>
-                                <th class="hidden-xs" >NOMBRE D'ARTICLES</th>
+                                <th class="hidden-xs">DATE PASSAGE </th>
+                                <th class="hidden-xs">NOMBRE D'ARTICLES</th>
                                 <th class="center"><i class="fa fa-trush"></i> Panier </th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr ng-repeat="x in toC track by $index ">
-                                <td class="hidden-xs" >{{x.ID_COMMANDE}}</td>
+                                <td class="hidden-xs">{{x.ID_COMMANDE}}</td>
                                 <td>{{x.NOM_CLIENT}}</td>
                                 <td class="hidden-xs">{{x.PRENOM_CLIENT}}</td>
-                                <td class="hidden-xs" >{{x.TELEPHONE_CLIENT}}</td>
+                                <td class="hidden-xs">{{x.TELEPHONE_CLIENT}}</td>
                                 <td>{{x.Adresse_Complete_Collect}}</td>
                                 <td class="hidden-xs">{{x.DD_COMMANDE}}</td>
-                                <td class="hidden-xs" >{{x.NBR_ARTICLES}}</td>
+                                <td class="hidden-xs">{{x.NBR_ARTICLES}}</td>
                                 <td>
                                     <div class="center">
                                         <button type="button" ng-click="RedirectL($index)" class="btn btn-wide btn-success">
