--- a/STANDARD/assets/views/Livreur/ValidationLivraison.html
+++ b/STANDARD/assets/views/Livreur/ValidationLivraison.html
@@ -23,7 +23,7 @@
                 Please try to re-size your browser window in order to see the tables in responsive mode.
             </div> -->
             <div ng-init="toDeliver()" class="table-responsive">
-                <div class=" table-responsive">
+                <div id="table" class="table-responsive">
                     <!-- <label>Search: <input ng-model="searchText"></label> -->
                     <table class="table table-stripped table-hover" id="sample-table-2">
                         <thead>
