--- a/STANDARD/assets/views/Client/createAccount.html
+++ b/STANDARD/assets/views/Client/createAccount.html
@@ -164,6 +164,16 @@
                                 </label>
                             </div>
                         </div> -->
+                    <div class="form-actions has-error">
+                        <!-- <div class="checkbox clip-check check-primary">
+                            <input type="checkbox" id="remember" value="1">
+                            <label for="remember">
+								Keep me signed in
+							</label>
+                        </div> -->
+                        <label id="error" class="hidden"> Un utilisateur avec ce numero de telephone existe deja <span class="symbol required"></span> </label>
+
+                    </div>
                     <div class="form-actions has-success">
                         <!-- <p>
                                 Avez-Vous Deja Un Compte?
