--- a/STANDARD/assets/views/partials/nav.html
+++ b/STANDARD/assets/views/partials/nav.html
@@ -9,7 +9,7 @@
 
 </div>
 <ul class="main-navigation-menu" ng-controller="SparklineCtrl">
-    <li id="" ui-sref-active="active">
+    <!-- <li id="none" ui-sref-active="active">
         <a ui-sref="app.dashboard">
             <div class="item-content">
                 <div class="item-media">
@@ -20,7 +20,7 @@
                 </div>
             </div>
         </a>
-    </li>
+    </li> -->
     <!-- Debut : Liste des clients -->
     <li ui-sref-active="active">
         <a id="serviceClients" ui-sref="app.BdClients">
