--- a/STANDARD/assets/views/Client/CmdEnCours.html
+++ b/STANDARD/assets/views/Client/CmdEnCours.html
@@ -22,7 +22,7 @@
                                     <tr>
                                         <th>Ref Commande</th>
                                         <!-- <th>Nombre Articles</th> -->
-                                        <th>Date Commande</th>
+                                        <th> Date et heure de collecte</th>
                                         <!-- <th>Date Fin Commande</th> -->
                                         <!-- <th>Quantité</th> -->
                                         <th>Statut</th>
