--- a/STANDARD/assets/views/Client/createAccount.html
+++ b/STANDARD/assets/views/Client/createAccount.html
@@ -1,4 +1,6 @@
 <!-- start: LOGIN -->
+<!-- <script src="assets/js/controllers/sweetAlertCtrl.js"></script> -->
+
 <div class="row">
     <div class="main-login col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
         <div class="logo">
@@ -10,7 +12,7 @@
             <form name="Form" id="form1" novalidate ng-submit="form.submit(Form)">
                 <fieldset>
                     <legend>
-                        Client Inscription
+                        Inscription Client
                     </legend>
                     <p>
                         Veuillez remplir tous les champs:
@@ -43,8 +45,8 @@
                     </div>
                     <div class="form-group" ng-class="{'has-error':Form.phone.$dirty && Form.phone.$invalid, 'has-success':Form.phone.$valid}">
                         <span class="input-icon">
-                                <input type="number" class="form-control" name="phone"  ng-minlength="10" 
-                                ng-maxlength="10" placeholder="Phone" ng-model="myModel.phone" required>
+                                <input type="text" class="form-control" name="phone"  ng-minlength="10" 
+                                ng-maxlength="10" placeholder="(+212)6 00 00 00 00" ng-model="myModel.phone" required>
                                 <i class="fa fa-phone"></i> 
                              </span>
                         <span class="error text-small block" ng-if="Form.phone.$dirty && Form.phone.$error.required">Votre numero de telephone est obligatoire</span>
@@ -60,7 +62,7 @@
                     </div>
                     <div class="form-group">
                         <label class="block">
-                                Vous Etes:
+                                Vous êtes:
                             </label>
                         <div class="clip-radio radio-primary" ng-init="gender='HOMME'">
                             <input type="radio" id="rg-male" name="gender" ng-model="gender" value="HOMME">
@@ -75,7 +77,7 @@
                     </div>
                     <div class="form-group">
                         <label class="block">
-                                Type Compte:
+                                Type compte:
                             </label>
                         <div class="clip-radio radio-primary" ng-init="compte='particulier'">
                             <input type="radio" id="rg-particulier" name="compte" ng-model="compte" value="particulier">
@@ -90,7 +92,7 @@
                     </div>
                     <div class="form-group" ng-class="{'has-error':Form.password.$dirty && Form.password.$invalid, 'has-success':Form.password.$valid}">
                         <span class="input-icon">
-                                    <input type="password" class="form-control"  id="password" name="password" ng-model="myModel.password" placeholder="Mot De Passe">
+                                    <input type="password" class="form-control"  id="password" name="password" ng-model="myModel.password" placeholder="Mot de passe">
                                     <i class="fa fa-lock"></i> 
                                 </span>
                         <!-- <input type="password" placeholder="Enter a Password" class="form-control" name="password" ng-model="myModel.password" required/> -->
@@ -99,7 +101,7 @@
                     </div>
                     <div class="form-group" ng-class="{'has-error':Form.password2.$dirty && Form.password2.$error.compareTo || Form.password2.$dirty && Form.password2.$invalid, 'has-success':Form.password2.$valid}">
                         <span class="input-icon">
-                                <input type="password" class="form-control" name="password2" ng-model="myModel.password2"  placeholder="Mot De Passe Confirmation" compare-to="myModel.password" required>
+                                <input type="password" class="form-control" name="password2" ng-model="myModel.password2"  placeholder="Confirmation de mot de passe" compare-to="myModel.password" required>
                                 <i class="fa fa-lock"></i> 
                             </span>
                         <span class="error text-small block" ng-if="Form.password2.$dirty && Form.password2.$error.required">Confirmez votre me de passe</span>
@@ -171,7 +173,8 @@
 								Keep me signed in
 							</label>
                         </div> -->
-                        <label id="error" class="hidden"> Un utilisateur avec ce numero de telephone existe deja <span class="symbol required"></span> </label>
+                        <label id="error" class="hidden"> Votre compte a été crée <span class="symbol required"></span> </label>
+                        <!-- <label id="suc" class="hidden"> Un utilisateur avec ce numero de telephone existe deja <span class="symbol required"></span> </label> -->
 
                     </div>
                     <div class="form-actions has-success">
@@ -181,10 +184,38 @@
                                     Se Connecter
                                 </a>
                             </p> -->
+
+                        <div id="success" class="hidden alert alert-block alert-success fade in">
+                            <button data-ct-dismiss="alert" class="close" type="button">
+									&times;
+								</button>
+                            <h4 class="alert-heading margin-bottom-10"><i class="ti-check"></i> Success!</h4>
+                            <p class="margin-bottom-10">
+                                Votre compte a été crée
+                            </p>
+                            <p>
+                                <a ui-sref="login.signin" class="btn btn-success">
+										Se connecter
+									</a>
+                                <!-- <a href="#" class="btn btn-o btn-success">
+										Or do this
+									</a> -->
+                            </p>
+                        </div>
+
                         <label id="success" class="hidden"> Username ou mot de passe incorrecte <span class="symbol required"></span> </label>
                         <button class="btn btn-primary pull-right" type="submit">
                                 S'inscrire <i class="fa fa-arrow-circle-right"></i>
                             </button>
+                        <!-- <button class="btn btn-primary pull-left" type="button" ui-sref="login.signin">
+                                 <i class="fa fa-arrow-circle-left"></i> Se connecter
+                            </button> -->
+                    </div>
+                    <div class="new-account">
+                        Vous avez déja un compte ?
+                        <a ui-sref="login.signin">
+							Se connecter
+						</a>
                     </div>
                 </fieldset>
             </form>
@@ -197,4 +228,4 @@
         <!-- end: LOGIN BOX -->
     </div>
 </div>
-<!-- end: LOGIN
+<!-- end: LOGIN -->
