--- a/STANDARD/assets/views/ServiceClients/TableauSC.html
+++ b/STANDARD/assets/views/ServiceClients/TableauSC.html
@@ -20,28 +20,30 @@
                     <table class="table table-striped table-hover" id="sample-table-2">
                         <thead>
                             <tr>
-                            
+
                                 <th>#</th>
-                                <th >Nom et Prenom Client</th>
-                                <th class="hidden-xs" >N° Telephone</th>
-                                <th class="hidden-xs" >Date Commande</th>
-                                <th class="hidden-xs" >Adresse Collecte </th>
+                                <th>Nom et Prenom Client</th>
+                                <th>Nombre d'articles</th>
+                                <th class="hidden-xs">N° Telephone</th>
+                                <th class="hidden-xs">Date et heure de collecte</th>
+                                <th class="hidden-xs">Adresse Collecte </th>
                                 <th><i class="fa fa-time"></i> Modifier </th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr ng-repeat="x in CmdWait | filter:searchText ">
                                 <td>{{x.ID_COMMANDE}}</td>
+                                <td>{{x.NBR_ARTICLES}}</td>
                                 <td>{{x.NOM_CLIENT}} {{x.PRENOM_CLIENT}}</td>
-                                <td class="hidden-xs" >{{x.TELEPHONE_CLIENT}}</td>
-                                <td class="hidden-xs" >{{x.DD_COMMANDE}}</td>
-                                <td class="hidden-xs" >{{x.Adresse_Complete_Collect}}</td>
+                                <td class="hidden-xs">{{x.TELEPHONE_CLIENT}}</td>
+                                <td class="hidden-xs">{{x.DD_COMMANDE}}</td>
+                                <td class="hidden-xs">{{x.Adresse_Complete_Collect}}</td>
                                 <td>
 
                                     <div class="visible-md visible-lg visible-sm visible-xs">
                                         <a ng-click="openAside('left',$index)" class="btn btn-transparent btn-xs" tooltip-placement="top" uib-tooltip="Modifier"><i class="fa fa-gear "></i></a>
                                         <a ng-click="demo5(x)" class="btn btn-transparent btn-xs" tooltip-placement="top" uib-tooltip="Confirmer"><i class="fa fa-check"></i></a>
-                                     </div>
+                                    </div>
 
 
                                     <!-- Script du Modal -->
@@ -71,14 +73,14 @@
 									<span>Modifier</span>
 								</button> -->
                                     <!-- </div> -->
-                                <!-- </td> -->
-                                <!-- Button confirmer pour modifier le statut de la commande à confirmé -->
-                                <!-- <td>
+                                    <!-- </td> -->
+                                    <!-- Button confirmer pour modifier le statut de la commande à confirmé -->
+                                    <!-- <td>
                                     <div class="center">
                                         <button type="button" ng-click="demo5($index)" class="btn btn-wide btn-success">
                                         Confirmer
                                     </button> -->
-                                        <!-- button confirmé avec le script  -->
+                                    <!-- button confirmé avec le script  -->
                                     <!-- </div>
  -->
                                 </td>
