--- a/STANDARD/assets/views/login_login.html
+++ b/STANDARD/assets/views/login_login.html
@@ -12,16 +12,16 @@
                         Se connecter
                     </legend>
                     <p>
-                        Connectez vos à votre espace : 
+                        Connectez vous à votre espace :
                     </p>
                     <div class="form-group has-error ">
-                        
+
                         <span class="input-icon">
 							<input type="text" ng-model="number" class="form-control"  placeholder="Numero de Telephone">
 							<i class="fa fa-user"></i> </span>
                     </div>
                     <div class="form-group form-actions has-error">
-                        
+
                         <span class="input-icon">
 							<input type="password" ng-model="pass" class="form-control password" placeholder="Mot de passe">
 							<i class="fa fa-lock"></i>
@@ -39,6 +39,9 @@
                         <label id="error" class="hidden"> Username ou mot de passe incorrecte <span class="symbol required"></span> </label>
                         <button ng-click="login()" class="btn btn-primary pull-right">
 							Login <i class="fa fa-arrow-circle-right"></i>
+                        </button>
+                        <button href="#" class="btn btn-primary pull-left">
+							<i class="fa fa-arrow-circle-left"></i> Website 
 						</button>
                     </div>
                     <div class="new-account">
