--- a/STANDARD/assets/views/Client/HistoriqueCmd.html
+++ b/STANDARD/assets/views/Client/HistoriqueCmd.html
@@ -110,8 +110,8 @@
                                 <tbody>
                                     <tr ng-repeat="y in historique track by $index">
                                         <td>{{y.ID_COMMANDE}}</td>
-                                        <td class="hidden-xs">{{y.DD_COMMANDE}}</td>
-                                        <td class="hidden-xs">{{y.DF_COMMANDE}}</td>
+                                        <td class="hidden-xs">{{y.DATECOMMANDE}}</td>
+                                        <td class="hidden-xs">{{y.DATEFCOMMANDE}}</td>
                                         <td class="hidden-xs">{{y.MONTANT}}</td>
                                         <td class="center">
                                             <div class="visible-md visible-lg hidden-sm hidden-xs">
