--- a/STANDARD/assets/views/login_login.html
+++ b/STANDARD/assets/views/login_login.html
@@ -40,9 +40,10 @@
                         <button ng-click="login()" class="btn btn-primary pull-right">
 							Login <i class="fa fa-arrow-circle-right"></i>
                         </button>
-                        <button href="#" class="btn btn-primary pull-left">
-							<i class="fa fa-arrow-circle-left"></i> Website 
-						</button>
+                        <!-- <button href="pressingadomicile.ma" class="btn btn-azure pull-left"> -->
+                        <a class="btn btn-azure pull-left" role="button" href="https://pressingadomicile.ma/">
+                            <i class="fa fa-arrow-circle-left"></i> Website </a>
+                        <!-- </button> -->
                     </div>
                     <div class="new-account">
                         Vous n'avez pas de compte ?
