--- a/STANDARD/assets/views/partials/top-navbar.html
+++ b/STANDARD/assets/views/partials/top-navbar.html
@@ -94,7 +94,7 @@
                     <a ui-sref="app.pages.messages" translate="topbar.user.MESSAGES"> My Messages (3) </a>
                 </li> -->
                 <li>
-                    <a ui-sref="login.lockscreen" translate="topbar.user.LOCKSCREEN"> Lock Screen </a>
+                    <a ui-sref="login.lockscreen" id="lockscreen" translate="topbar.user.LOCKSCREEN"> Lock Screen </a>
                 </li>
                 <li>
                     <span ng-controller="SparklineCtrl "> <a ng-click="logiout()"  > Log Out </a> </span>
